qp-wallet/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qp-wallet
  namespace: test
  labels:
    app: qp-wallet
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qp-wallet
      
  template:
    metadata:
      labels:
        app: qp-wallet
        
    spec:
      containers:
      - name: qp-wallet
        image: dockerhub.sihai.com:8081/test/qp-wallet:20190926093639
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 8092
      imagePullSecrets:
      - name: harbor       

---
apiVersion: v1
kind: Service
metadata:
  name: qp-wallet
  namespace: test
spec:
  selector:
    app: qp-wallet
  ports:
  - port: 8092
    name: qp-wallet
  type: NodePort
