qp-wallet/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-wallet-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: wallet.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-wallet
          servicePort: 8092
